# ros2_ws_Mujoco

./: .gitignore  CLAUDE.md  README.md  frames_2026-06-07_14.00.13.gv
docs/plans/: 2026-05-27_step3_implementation_plan.md  2026-06-06_step3_implementation_plan_v2.md
docs/references/: GoFa_CRB15000_Config_Files.md
docs/reports/: 2026-06-07_work_report.md  p4_pick_place_技术详解.md  学习记录.md  脚本启动命令.md
logs/: 2026-05-27.md  2026-06-09.md
p5_moveit2_learning/: README.md
p5_moveit2_learning/docs/troubleshooting/: 0001_JTC_blocking_point.md  0002_A2_e2e_validation.md
p5_moveit2_learning/scripts/: 01_plan_execute_demo.py  02_direct_trajectory_test.py  03_pick_place_scene.py
resources/p5/: p5_step2_direct_trajectory.json  p5_step3_pick_place_scene.json
src/gofa_moveit_config/: CMakeLists.txt  package.xml
src/gofa_moveit_config/config/: gofa.rviz  gofa.srdf  gofa_with_scene.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_with_scene.yaml
src/gofa_moveit_config/launch/: demo.launch.py  demo_with_scene.launch.py  move_group.launch.py
src/gofa_mujoco_bringup/: CMakeLists.txt  package.xml
src/gofa_mujoco_bringup/config/: gofa_controllers.yaml
src/gofa_mujoco_bringup/launch/: gofa_mujoco.launch.py
src/gofa_mujoco_bringup/meshes/visual/: link_1.dae  link_3.dae  link_5.dae
src/gofa_mujoco_bringup/mujoco_models/: gofa_table_block.xml
src/gofa_mujoco_bringup/urdf/: gofa.ros2_control.urdf.xacro  gofa_with_scene.ros2_control.urdf.xacro
tutorials/p1_hello_mujoco/: 01_hello_mujoco.py  02_pendulum.py  03_spring_damper.py  README.md
tutorials/p2_ros2_bridge/: README.md
tutorials/p2_ros2_bridge/models/: pendulum_actuated.xml  pendulum_pub.xml
tutorials/p2_ros2_bridge/ros2_pkg/mujoco_bridge/: package.xml  setup.py
tutorials/p2_ros2_bridge/ros2_pkg/mujoco_bridge/mujoco_bridge/: bridge_node.py
tutorials/p2_ros2_bridge/scripts/: step1_openloop_control.py  step2_ros2_subscriber.py  step3_joint_publisher.py  step4_full_bridge.py
tutorials/p3_arm_model/: README.md  gofa_crb15000.xml  step1_verify_model.py  step2_interactive_viewer.py  step3_ptp_move.py  step3_trajectory_control.py
tutorials/p4_pick_place/: README.md  gofa_table_block.xml  step1_build_scene.py  step2_manual_pick_place.py
(+8 files in other folders)
