<?xml version="1.0"?>
<package format="3">
  <name>gofa_mujoco_bringup</name>
  <version>0.1.0</version>
  <description>ABB GoFa CRB15000 MuJoCo + ros2_control bridge</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mujoco_ros2_control</depend>
  <depend>mujoco_ros2_control_plugins</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>forward_command_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
